        Reviewed by Eric.

http://bugs.webkit.org/show_bug.cgi?id=12007
        SVGColor::setRGBColor color creates/deletes many strings, slowing down parsing

        Refactor code so svg reuses cssparser methods. Also make
        SVGColor and SVGPaint more efficient by avoiding using
        setRGBColor internally.



Canonical link: https://commits.webkit.org/15524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18480 268f45cc-cd09-0410-ab3c-d52691b4dbfc